--- a/language/German/strings.xml
+++ b/language/German/strings.xml
@@ -1896,7 +1896,7 @@
   <string id="19069">EPG</string>
   <string id="19070">Zeit bis zur EPG-Suche</string>
   <string id="19071">Zeit bis zur EPG-Aktualisierung</string>
-  <string id="19072">Ignoriere Datanbank für PVR-Server EPG</string>
+  <string id="19072">Ignoriere Datenbank für PVR-Server EPG</string>
   <string id="19073">Zeitlimit für Kanaleingabe</string>
 
   <string id="19499">Andere/Unbekannt</string>
