--- a/language/Chinese (Simple)/strings.xml
+++ b/language/Chinese (Simple)/strings.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <!--$Revision$-->
-<!--Based on english strings version 26168 -->
+<!--Based on english strings version 26656 -->
 <strings>
   <string id="0">程序</string>
   <string id="1">图片</string>
@@ -633,10 +633,10 @@
   <string id="763">亮绿</string>
   <string id="764">翠绿</string>
   <string id="765">青色</string>
-  <string id="766">保留</string>
-  <string id="767">保留</string>
-  <string id="768">保留</string>
-  <string id="769">保留</string>
+  <string id="766">浅灰</string>
+  <string id="767">灰色</string>
+  <!-- strings 768 and 769 reserved for more subtitle colors -->
+
   <string id="770">错误 %i：不能共享</string>
   <string id="771">- FTP 服务器限定工作在 FATX 格式</string>
   <string id="772">音频输出</string>
@@ -2074,6 +2074,8 @@
   <string id="23050">开启图文电视</string>
   <string id="23051">片段 %i</string>
   <string id="23052">缓存 %i 字节</string>
+  <string id="23053">停止</string>
+  <string id="23054">运行</string>
 
   <!-- strings 23100 thru 23150 reserved for external player -->
   <string id="23100">外部播放器激活</string>
