--- a/skin/Confluence/language/English/strings.xml
+++ b/skin/Confluence/language/English/strings.xml
@@ -46,6 +46,7 @@
   <string id="31058">System music files</string>
   <string id="31059">Current playlist</string>
   <string id="31060">This file is stacked, select the part you want to play from.</string>
+  <string id="31061">Current Selected</string>
   
   <!-- Skin Settings labels -->
   <string id="31100"></string>
