--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2126,26 +2126,26 @@
   <string id="23057">A unknown error is occurred</string>
   <string id="23058">Disclaimer</string>
   <string id="23059">Would you still use the Add-on?</string>
-  <string id="23060">Manage Multitype Add-on's</string>
-  <string id="23061">Manage Visualization</string>
-  <string id="23062">Manage Skin Add-on's</string>
-  <string id="23063">Manage PVR clients</string>
-  <string id="23064">Manage Scripts</string>
-  <string id="23065">Manage PVR Scrapers</string>
-  <string id="23066">Manage Movie Scrapers</string>
-  <string id="23067">Manage Music Scrapers</string>
-  <string id="23068">Manage Program Scrapers</string>
-  <string id="23069">Manage Screensaver</string>
+  <string id="23060"></string>
+  <string id="23061">Manage Visualizations...</string>
+  <string id="23062"></string>
+  <string id="23063"></string>
+  <string id="23064">Manage Scripts...</string>
+  <string id="23065">Manage PVR Scrapers...</string>
+  <string id="23066">Manage Movie Scrapers...</string>
+  <string id="23067">Manage Music Scrapers...</string>
+  <string id="23068">Manage Music-Video Scrapers...</string>
+  <string id="23069">Manage Screensavers...</string>
   <string id="23070"></string>
   <string id="23071"></string>
   <string id="23072"></string>
   <string id="23073"></string>
   <string id="23074"></string>
-  <string id="23075">Manage Weather plugins</string>
-  <string id="23076">Manage Audio DSP's</string>
-  <string id="23077">Manage TV-Show Scrapers</string>
-  <string id="23078">Manage Music-Video Scrapers</string>
-  <string id="23080">Manage external Screensaver</string>
+  <string id="23075">Manage Weather plugins...</string>
+  <string id="23076"></string>
+  <string id="23077"></string>
+  <string id="23078"></string>
+  <string id="23080"></string>
   <string id="23081">This Add-on can not be configured</string>
   <string id="23082">Lock Add-on manager</string>
   <string id="23083">Use this Add-on again</string>
