--- a/language/Greek/strings.xml
+++ b/language/Greek/strings.xml
@@ -2,9 +2,9 @@
 <!--Language file translated with Team XBMC Translator-->
 <!--Translator: Ydatografida-->
 <!--Email: ydatografida@gmail.com-->
-<!--Date of translation: 01/24/2010-->
+<!--Date of translation: 01/27/2010-->
 <!--$Revision$-->
-<!--Based on english strings version 27135-->
+<!--Based on english strings version 27218-->
 <strings>
   <string id="0">Εφαρμογές</string>
   <string id="1">Φωτογραφίες</string>
@@ -1423,7 +1423,7 @@
   <string id="20038">Κλείδωμα της μουσικής</string>
   <string id="20039">Κλείδωμα των βίντεο</string>
   <string id="20040">Κλείδωμα των φωτογραφιών</string>
-  <string id="20041">Κλείδωμα των windows εφαρμογών και των scripts</string>
+  <string id="20041">Κλείδωμα εφαρμογών και scripts windows</string>
   <string id="20042">Κλείδωμα της διαχείρισης αρχείων</string>
   <string id="20043">Κλείδωμα των ρυθμίσεων</string>
   <string id="20044">Νέα έναρξη</string>
@@ -1727,6 +1727,9 @@
   <string id="20445">Fanart</string>
   <string id="20446">Βρέθηκαν τοπικά αποθηκευμένες πληροφορίες.</string>
   <string id="20447">Να αγνοηθούν και να ανανεωθούν από το internet;</string>
+  <string id="20448">Αδυναμία λήψης πληροφοριών </string>
+  <string id="20449">Ίσως ο διακομιστής να είναι πλέον μη διαθέσιμος.</string>
+  <string id="20450">Επιθυμείτε, να συνεχίσετε  την αναζήτηση;</string>
   <string id="21330">Προβολή κρυφών αρχείων και φακέλων</string>
   <string id="21331">Πελάτης TuxBox</string>
   <string id="21332">ΠΡΟΣΟΧΗ: Η συσκευή TuxBox βρίσκεται σε κατάσταση εγγραφής!</string>
