fixed: ticket #9467 - text too long to display. thanks to linuxluemmel
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31338 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/German/strings.xml
+++ b/language/German/strings.xml
@@ -1464,7 +1464,7 @@
   <string id="20024">Nur neue</string>
   <string id="20025">Komplett</string>
   <string id="20026">Region</string>
-  <string id="20037">Zusammenfassung</string>
+  <string id="20037">Info</string>
   <string id="20038">Musik-Bereich sperren</string>
   <string id="20039">Videos-Bereich sperren</string>
   <string id="20040">Bilder-Bereich sperren</string>
