changed: new translated message for Windowed in screen/resolution selection
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31429 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -192,6 +192,7 @@
   <string id="239">Clear playlist on finish</string>
   <string id="240">Display Mode</string>
   <string id="241">Full Screen #%d</string>
+  <string id="242">Windowed</string>
 
   <string id="247">Scripts</string>
   <string id="248">Language</string>
